--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-pdf": "^9.1.0",
+    "react-pdf-viewer": "^0.1.0",
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
