--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-pdf": "^9.1.0",
-    "react-pdf-viewer": "^0.1.0",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",    
+    "@react-pdf-viewer/default-layout":" ^3.12.0",
+    "pdfjs-dist": "^3.10.111"
   },
   "devDependencies": {
     "@types/node": "^20",
